--- a/Cargo.toml
+++ b/Cargo.toml
@@ -9,11 +9,17 @@ edition = "2021"
 members = [
     "node",
     "runtime",
+    "consensus/micc-primitives",
+    "consensus/micc-client",
+    "consensus/micc",
 ]
 resolver = "2"
 
 [workspace.dependencies]
 solochain-template-runtime = { path = "./runtime", default-features = false }
+sp-consensus-micc = { path = "./consensus/micc-primitives", default-features = false }
+sc-consensus-micc = { path = "./consensus/micc-client", default-features = false }
+pallet-micc = { path = "./consensus/micc", default-features = false }
 clap = { version = "4.5.13" }
 frame-benchmarking-cli = { version = "47.0.0", default-features = false }
 frame-metadata-hash-extension = { version = "0.8.0", default-features = false }
@@ -35,15 +41,23 @@ sc-service = { version = "0.50.0", default-features = false }
 sc-telemetry = { version = "28.1.0", default-features = false }
 sc-transaction-pool = { version = "39.0.0", default-features = false }
 sc-transaction-pool-api = { version = "39.0.0", default-features = false }
+sc-block-builder = { version = "0.44.0", default-features = false }
+sc-consensus-slots = { version = "0.48.0", default-features = false }
+sc-keystore = { version = "35.0.0", default-features = false }
 sp-api = { version = "36.0.1", default-features = false }
+sp-application-crypto = { version = "36.0.0", default-features = false }
+sp-tracing = { version = "36.0.0", default-features = false }
 sp-block-builder = { version = "36.0.0", default-features = false }
 sp-blockchain = { version = "39.0.0", default-features = false }
+sp-consensus = { version = "0.42.0", default-features = false }
 sp-consensus-aura = { version = "0.42.0", default-features = false }
+sp-consensus-slots = { version = "0.42.0", default-features = false }
 sp-core = { version = "36.1.0", default-features = false }
 sp-genesis-builder = { version = "0.17.0", default-features = false }
 sp-inherents = { version = "36.0.0", default-features = false }
 sp-io = { version = "40.0.1", default-features = false }
 sp-keyring = { version = "41.0.0", default-features = false }
+sp-keystore = { version = "0.42.0", default-features = false }
 sp-runtime = { version = "41.1.0", default-features = false }
 sp-timestamp = { version = "36.0.0", default-features = false }
 substrate-frame-rpc-system = { version = "43.0.0", default-features = false }
@@ -70,7 +84,15 @@ sp-storage = { version = "22.0.0", default-features = false }
 sp-transaction-pool = { version = "36.0.0", default-features = false }
 sp-version = { version = "39.0.0", default-features = false }
 substrate-wasm-builder = { version = "26.0.1", default-features = false }
-
+substrate-test-runtime-client = { version = "0.51.0", default-features = false }
+async-trait = { version = "0.1.80", default-features = false }
+log = { version = "0.4.22", default-features = false }
+thiserror = { version = "2.0.12", default-features = false }
+prometheus-endpoint = { version = "2.1.2", default-features = false }
+tokio = { version = "1.44.0", default-features = false, features = ["full"] }
+tokio-stream = { version = "0.1.17", default-features = false }
+parking_lot = { version = "0.12.1", default-features = false }
+tempfile = { version = "3.11.0", default-features = false }
 [profile.release]
 opt-level = 3
 panic = "unwind"
@@ -79,4 +101,3 @@ panic = "unwind"
 codegen-units = 1
 inherits = "release"
 lto = true
-
