--- a/Cargo.toml
+++ b/Cargo.toml
@@ -12,6 +12,7 @@ members = [
     "consensus/micc-primitives",
     "consensus/micc-client",
     "consensus/micc",
+    "consensus/slots",
 ]
 resolver = "2"
 
@@ -25,6 +26,7 @@ frame-benchmarking-cli = { version = "47.0.0", default-features = false }
 frame-metadata-hash-extension = { version = "0.8.0", default-features = false }
 frame-system = { version = "40.1.0", default-features = false }
 futures = { version = "0.3.31" }
+futures-timer = { version = "3.0.3" }
 jsonrpsee = { version = "0.24.3" }
 pallet-transaction-payment = { version = "40.0.0", default-features = false }
 pallet-transaction-payment-rpc = { version = "43.0.0", default-features = false }
@@ -42,11 +44,11 @@ sc-telemetry = { version = "28.1.0", default-features = false }
 sc-transaction-pool = { version = "39.0.0", default-features = false }
 sc-transaction-pool-api = { version = "39.0.0", default-features = false }
 sc-block-builder = { version = "0.44.0", default-features = false }
-sc-consensus-slots = { version = "0.48.0", default-features = false }
+sc-consensus-slots = { path = "./consensus/slots", default-features = false }
 sc-keystore = { version = "35.0.0", default-features = false }
 sp-api = { version = "36.0.1", default-features = false }
-sp-application-crypto = { version = "36.0.0", default-features = false }
-sp-tracing = { version = "36.0.0", default-features = false }
+sp-application-crypto = { version = "40.1.0", default-features = false }
+sp-tracing = { version = "17.1.0", default-features = false }
 sp-block-builder = { version = "36.0.0", default-features = false }
 sp-blockchain = { version = "39.0.0", default-features = false }
 sp-consensus = { version = "0.42.0", default-features = false }
@@ -78,21 +80,23 @@ pallet-transaction-payment-rpc-runtime-api = { version = "40.0.0", default-featu
 scale-info = { version = "2.11.6", default-features = false }
 serde_json = { version = "1.0.132", default-features = false }
 sp-consensus-grandpa = { version = "23.1.0", default-features = false }
+sp-arithmetic = { version = "26.1.0", default-features = false }
+sp-state-machine = { version = "0.45.0", default-features = false }
 sp-offchain = { version = "36.0.0", default-features = false }
 sp-session = { version = "38.1.0", default-features = false }
 sp-storage = { version = "22.0.0", default-features = false }
 sp-transaction-pool = { version = "36.0.0", default-features = false }
 sp-version = { version = "39.0.0", default-features = false }
 substrate-wasm-builder = { version = "26.0.1", default-features = false }
-substrate-test-runtime-client = { version = "0.51.0", default-features = false }
 async-trait = { version = "0.1.80", default-features = false }
 log = { version = "0.4.22", default-features = false }
 thiserror = { version = "2.0.12", default-features = false }
-prometheus-endpoint = { version = "2.1.2", default-features = false }
+prometheus-endpoint = { version = "0.17.2", package = "substrate-prometheus-endpoint", default-features = false }
 tokio = { version = "1.44.0", default-features = false, features = ["full"] }
 tokio-stream = { version = "0.1.17", default-features = false }
 parking_lot = { version = "0.12.1", default-features = false }
 tempfile = { version = "3.11.0", default-features = false }
+
 [profile.release]
 opt-level = 3
 panic = "unwind"
