--- a/node/Cargo.toml
+++ b/node/Cargo.toml
@@ -34,8 +34,8 @@ sc-cli.default-features = true
 sc-cli.workspace = true
 sc-client-api.default-features = true
 sc-client-api.workspace = true
-sc-consensus-aura.default-features = true
-sc-consensus-aura.workspace = true
+sc-consensus-micc = { path = "../consensus/micc-client", default-features = true }
+sc-consensus-slots = { path = "../consensus/slots", default-features = true }
 sc-consensus-grandpa.default-features = true
 sc-consensus-grandpa.workspace = true
 sc-consensus.default-features = true
@@ -61,8 +61,7 @@ sp-block-builder.default-features = true
 sp-block-builder.workspace = true
 sp-blockchain.default-features = true
 sp-blockchain.workspace = true
-sp-consensus-aura.default-features = true
-sp-consensus-aura.workspace = true
+sp-consensus-micc = { path = "../consensus/micc-primitives", default-features = true }
 sp-core.default-features = true
 sp-core.workspace = true
 sp-genesis-builder.default-features = true
