--- a/Cargo.toml
+++ b/Cargo.toml
@@ -13,6 +13,7 @@ members = [
     "consensus/micc-client",
     "consensus/micc",
     "consensus/slots",
+    "pallets/rate-limiter",
 ]
 resolver = "2"
 
@@ -21,6 +22,7 @@ solochain-template-runtime = { path = "./runtime", default-features = false }
 sp-consensus-micc = { path = "./consensus/micc-primitives", default-features = false }
 sc-consensus-micc = { path = "./consensus/micc-client", default-features = false }
 pallet-micc = { path = "./consensus/micc", default-features = false }
+pallet-rate-limiter = { path = "./pallets/rate-limiter", default-features = false }
 clap = { version = "4.5.13" }
 frame-benchmarking-cli = { version = "47.0.0", default-features = false }
 frame-metadata-hash-extension = { version = "0.8.0", default-features = false }
@@ -57,6 +59,7 @@ sp-io = { version = "40.0.1", default-features = false }
 sp-keyring = { version = "41.0.0", default-features = false }
 sp-keystore = { version = "0.42.0", default-features = false }
 sp-runtime = { version = "41.1.0", default-features = false }
+sp-std = { version = "14.0.0", default-features = false }
 sp-timestamp = { version = "36.0.0", default-features = false }
 substrate-frame-rpc-system = { version = "43.0.0", default-features = false }
 substrate-build-script-utils = { version = "11.0.0", default-features = false }
