Fix development authority limits and update environment documentation
  - Increase development max authorities from 1 to 10 for flexible testing
  - Update environment configuration documentation and comments
  - Add comprehensive README with environment-specific deployment instructions
  - Complete comprehensive security audit and update AUDIT_FINDINGS.md
  - Fix authority configuration mismatch causing genesis panic errors

--- a/node/Cargo.toml
+++ b/node/Cargo.toml
@@ -93,6 +93,11 @@ runtime-benchmarks = [
 	"solochain-template-runtime/runtime-benchmarks",
 	"sp-runtime/runtime-benchmarks",
 ]
+
+# Environment-specific features for configuration tuning
+production = ["solochain-template-runtime/production"]
+staging = ["solochain-template-runtime/staging"]
+local-testnet = ["solochain-template-runtime/local-testnet"]
 # Enable features that allow the runtime to be tried and debugged. Name might be subject to change
 # in the near future.
 try-runtime = [
