--- a/runtime/Cargo.toml
+++ b/runtime/Cargo.toml
@@ -124,3 +124,8 @@ metadata-hash = ["substrate-wasm-builder/metadata-hash"]
 # A convenience feature for enabling things when doing a build
 # for an on-chain release.
 on-chain-release-build = ["metadata-hash", "sp-api/disable-logging"]
+
+# Environment-specific features for configuration tuning
+production = []
+staging = []
+local-testnet = []
